# PyScriptTemplate

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
hooks/quickstart/: conf.py_t
{{cookiecutter.project_slug}}/: .travis.yml  ABOUT.rst  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.rst  cx_setup.py  deployment.yml  documentation.url  make.bat  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/docs/source/: conf.py  contents.rst  index.rst  installPip.rst  installRelease.rst  installSourceCLI.rst  {{cookiecutter.project_slug}}.rst
{{cookiecutter.project_slug}}/tests/: test_basic.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  __version__.py
