[metadata]
name = {{cookiecutter.project_slug}}
version = 0.0.8
url = {{cookiecutter.url}}
download_url = {{cookiecutter.source_control}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.author_email}}
description = {{cookiecutter.description}}
long_description = file: README.rst
license = {{cookiecutter.license}}
maintainer = {{cookiecutter.maintainer}}
maintainer_email = {{cookiecutter.maintainer_email}}


[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1
