[metadata]
name = {{cookiecutter.project_slug}}
version = {{cookiecutter.version}}
url = {{cookiecutter.url}}
download_url = {{cookiecutter.source_control}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.author_email}}
description = {{cookiecutter.description}}
long_description = file: README.rst
license = {{cookiecutter.license}}
maintainer = {{cookiecutter.maintainer}}
maintainer_email = {{cookiecutter.maintainer_email}}

[mypy]
ignore_missing_imports = True
{%- if cookiecutter.use_pytest == "y" %}

[tool:pytest]
testpaths = tests
addopts = --verbose -s
norecursedirs = build
{%- endif %}

[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1
